# liquid_pickup

./: CMakeLists.txt  README.md  frames_2024-06-16_17.48.40.gv  package.xml
TF-tree/: frames_2024-06-20_12.55.25.gv  sensors_deploy.gv
config/: arm_positions.yaml  bt_vision_eval.xml  bt_xml.xml  bt_xml_wihtout_validation.xml  liquid_pickup.xml  locations.yaml  sensors_deploy.xml  test.xml  test_2.xml
doc/: manifest.yaml
doc/html/: annotated.html  ba__frames__summit__xl_8h.html  ba__frames__summit__xl_8h_source.html  ba__interfaces_8h.html  ba__interfaces_8h_source.html  ba__types_8h.html  ba__types_8h_source.html  basket_8cpp.html  basket_8cpp_source.html  basket_8h.html  basket_8h_source.html  bt__node_8cpp.html  bt__node_8cpp_source.html  classBATimeLogger-members.html  classBATimeLogger.html  classBasketChange-members.html  classBasketChange.html  classBasketCheck-members.html  classBasketCheck.html  classBatteryCharge-members.html  classBatteryCharge.html  classBatteryCheck-members.html  classBatteryCheck.html  classDequeueTomato-members.html  classDequeueTomato.html  classFilterTomatoQueue-members.html  classFilterTomatoQueue.html  classGetLocationFromQueue-members.html  classGetLocationFromQueue.html  classGoToPose-members.html  classGoToPose.html  classGripperActuator-members.html  classGripperActuator.html  classIBAInitManipulatorNode-members.html  classIBAInitManipulatorNode.html  classIBAInitNodeHandle-members.html  classIBAInitNodeHandle.html  classIBAInitPathQueue-members.html  classIBAInitPathQueue.html  classIBAInitTomatoQueue-members.html  (+154 more)
include/: ba_frames_summit_xl.h  ba_interfaces.h  ba_types.h  basket.h  gripper_behavior.h  gripper_behavior_bt_action_node.hpp  helper.h  image_processing.h  manipulator.h  manipulator_behaviors.h  move_it_task_constructor_behaviors.h  navigation_behaviors.h  path_queue.h  pointcloud_processing.h  robot.h  ros_logs.h  sensors_deploy_behaviors.h  tests.h  time_logger.h  tomato_queue.h  vision_behaviors.h
launch/: behaviortree_with_groot.launch  liquid_pickup_launch.py  liquid_pickup_launch_real.py  sensors_deploy_launch.py  simulation_tf_launch.py
meshes/basket/: Basket.STL  Basket_V2.stl
scripts/: image_processing.csv  loc_scan.csv  loc_scan_1_12.csv  loc_scan_1_55.csv  loc_validate.csv  loc_validate_1_12.csv  loc_validate_1_55.csv  move_group.csv  move_group_split.csv  perceptioEval.py  plots.py
scripts/Measurements/Measurement_001/: image_processing.csv  move_base.csv  move_group.csv
scripts/Measurements/Measurement_002/: move_base.csv  move_group_split.csv
scripts/Measurements/Measurement_003/: image_processing.csv  move_base.csv  move_group.csv  setup.txt
scripts/Measurements/VisionValidation_1/: loc_scan.csv  loc_validate.csv
src/: basket.cpp  bt_node.cpp  gripper_behavior.cpp  gripper_behavior_bt_action_node.cpp  helper.cpp  image_processing.cpp  manipulator.cpp  manipulator_behaviors.cpp  move_it_task_constructor_behaviors.cpp  navigation_behaviors.cpp  path_queue.cpp  pointcloud_processing.cpp  robot.cpp  sensors_deploy_behaviors.cpp  tests.cpp  time_logger.cpp  tomato_queue.cpp  vision_behaviors.cpp
urdf/basket/: basket.urdf  basket.urdf.xacro
urdf/swab_container/: swab_container.urdf.xacro
