<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>liquid_pickup</name>
  <version>0.0.0</version>
  <description>Liquid pickup for NEPHELE project</description>
  <maintainer email="kapu@zhaw.ch">ros</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>behaviortree_cpp</depend>
  <depend>geometry_msgs</depend> 
  <depend>tf2</depend> 
  <depend>tf2_ros</depend> 
  <depend>tf2_geometry_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp_action</depend>
  <depend>rclcpp_components</depend>
  <depend>moveit_msgs</depend>
  <depend>control_msgs</depend>
  <depend>moveit_visual_tools</depend>
  <depend>nav2_msgs</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_msgs</depend>
  <!-- <depend>gazebo_ros</depend> -->
  <!-- <depend>OGRE</depend> -->
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <gazebo_ros gazebo_model_path="${prefix}/urdf"/> -->
  </export>

</package>
